please god let this work

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>lalalalalalala</title>
+        <title>What Quinn thinks of "As We May Think"</title>
     </head>
     <body>
         lalalalalalala
