--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <title>What Quinn thinks of "As We May Think"</title>
     </head>
     <body>
+        <main style="background-color: aquamarine;"
+            <h1>WHAT IS HAPPENING</h1>
         lalalalalalala
         lalalalalalala
         lalalalalalala
