why do we need m?

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <body>
         <main style="background-color: aquamarine;"
             <h1>WHAT IS HAPPENING</h1>
+            <ul style = "font-size: large;"
+                <li style="background-color: bisque;"></li>
+                <li> hmmmmmmmmMM</li>
+                <li style="background-color: blueviolet;"></li>
+            </ul>
         lalalalalalala
         lalalalalalala
         lalalalalalala
