--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
                 <li> hmmmmmmmmMM</li>
                 <li style="background-color: blueviolet;"></li>
             </ul>
+        </main>
+        <img src="https://e7.pngegg.com/pngimages/29/541/png-clipart-orange-juice-grapefruit-juice-apple-juice-fresh-juice-food-orange-thumbnail.png"
         lalalalalalala
         lalalalalalala
         lalalalalalala
