--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <li style="background-color: blueviolet;"></li>
             </ul>
         </main>
-        <img src="https://e7.pngegg.com/pngimages/29/541/png-clipart-orange-juice-grapefruit-juice-apple-juice-fresh-juice-food-orange-thumbnail.png"
+        <img src="https://www.freeiconspng.com/uploads/glass-with-orange-juice-png-0.png"
         lalalalalalala
         lalalalalalala
         lalalalalalala
