--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
     <head>
-        <title>What Quinn thinks of "As We May Think"</title>
+      
     </head>
     <body>
         <main style="background-color: aquamarine;"
-            <h1>WHAT IS HAPPENING</h1>
+            <h1>What Quinn thinks of "As We May Think"</h1>
             <ul style = "font-size: large;"
+                <li> here it is: </li>
                 <li style="background-color: bisque;"></li>
                 <li> hmmmmmmmmMM</li>
                 <li style="background-color: blueviolet;"></li>
