--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
             <h1>What Quinn thinks of "As We May Think"</h1>
             <ul style = "font-size: large;"
                 <li> here it is: </li>
-                <li style="background-color: bisque;"></li>
+                <li style="background-color: bisque;"> hmmmmmmM</li>
                 <li> hmmmmmmmmMM</li>
-                <li style="background-color: blueviolet;"></li>
+                <li style="background-color: blueviolet;"> just kidding, I just liked the names of the colors thus far featured </li>
+            </ul>
+            <ul style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
+                <li> honestly I think it's crazy that this man was predicting fairly specific technological achievements in the 40s </li>
+                <li style="padding: 40;"> that's the general summary of my thoughts.</li>
             </ul>
         </main>
         <img src="https://www.freeiconspng.com/uploads/glass-with-orange-juice-png-0.png"
+            width="400"
+            height="300" />
         lalalalalalala
         lalalalalalala
         lalalalalalala
