--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <main style="background-color: aquamarine;"
+            <p style="font-size: 70px;"> What Quinn thinks of "As We May Think"</p>
             <h1>What Quinn thinks of "As We May Think"</h1>
             <ul style = "font-size: large;"
                 <li> here it is: </li>
@@ -30,4 +31,5 @@
         lalalalalalala
     </body>
 </html>
+//<a href="url"> word we want linked</a>
 
