--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@
         lalalalalalala
     </body>
 </html>
-//<a href="url"> word we want linked</a>
+//<a href="https://happyhopper.org/"> word we want linked</a>
 
