--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     </head>
     <body>
         <main style="background-color: aquamarine;"
-            <p style="font-size: 70px;"> What Quinn thinks of "As We May Think"</p>
+            <p style="font-size: 90;">What Quinn thinks of "As We May Think"</p>
             <ul style = "font-size: large;"
-                <li> here it is: </li>
+                <li>here it is:</li>
                 <li style="background-color: bisque;"> hmmmmmmM</li>
                 <li> hmmmmmmmmMM</li>
                 <li style="background-color: blueviolet;"> just kidding, I just liked the names of the colors thus far featured </li>
