--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <main style="background-color: aquamarine;"
-            <p style="font-size: 90;">What Quinn thinks of "As We May Think"</p>
+            <h1 style="font-size: 90;">What Quinn thinks of "As We May Think"</h1>
             <ul style = "font-size: large;"
                 <li>here it is:</li>
                 <li style="background-color: bisque;"> hmmmmmmM</li>
