--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-      
+      <title>Week 1</title>
     </head>
     <body>
         <main style="background-color: aquamarine;"
-            <h1 style="font-size: 90;">What Quinn thinks of "As We May Think"</h1>
+        <h1 style="font-size: 90;">What Quinn thinks of "As We May Think"</h1>
             <ul style = "font-size: large;"
                 <li>here it is:</li>
                 <li style="background-color: bisque;"> hmmmmmmM</li>
