--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
       <title>Week 1</title>
     </head>
     <body>
+        <main style="background-color: rgb(250, 247, 239);">
+        <h1 style="color:rgb(241, 161, 11);">As We May Think: Reflection</h1>
+    </body>
+    <body>
         <main style="background-color: aquamarine;"
         <h1 style="font-size: 90;">What Quinn thinks of "As We May Think"</h1>
             <ul style = "font-size: large;"
