--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     </head>
     <body>
         <main style="background-color: rgb(250, 247, 239);">
-        <h1 style="color:rgb(241, 161, 11);">As We May Think: Reflection</h1>
+        <h1 style="color:rgb(41, 200, 101);">What Quinn thinks of "As We May Think"</h1>
     </body>
     <body>
-        <main style="background-color: aquamarine;"
-        <h1 style="font-size: 90;">What Quinn thinks of "As We May Think"</h1>
-            <ul style = "font-size: large;"
+        <main style="background-color: aquamarine;">
+            <ul style = "font-size: large;">
                 <li>here it is:</li>
                 <li style="background-color: bisque;"> hmmmmmmM</li>
                 <li> hmmmmmmmmMM</li>
