--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <main style="background-color: rgb(250, 247, 239);">
-        <h1 style="color:rgb(41, 200, 101);">What Quinn thinks of "As We May Think"</h1>
+        <h1 style="color:rgb(41, 200, 101);">ROUND 2: What Quinn thinks of "As We May Think"</h1>
     </body>
     <body>
         <main style="background-color: aquamarine;">
