--- a/index.html
+++ b/index.html
@@ -4,24 +4,12 @@
     </head>
     <body>
         <main style="background-color: rgb(250, 247, 239);">
-        <h1 style="color:rgb(41, 200, 101);">What Quinn thinks of "As We May Think"</h1>
+        <h1 style="color:rgb(41, 200, 101);">This is the home page to Quinn Hochglaube's very cool site</h1>
     </body>
-    <body>
-        <main style="background-color: aquamarine;">
-            <ul style = "font-size: large;">
-                <li>here it is:</li>
-                <li style="background-color: bisque;"> hmmmmmmM</li>
-                <li> hmmmmmmmmMM</li>
-                <li style="background-color: blueviolet;"> just kidding, I just liked the names of the colors thus far featured </li>
-            </ul>
-            <ul style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
-                <li> honestly I think it's crazy that this man was predicting fairly specific technological achievements in the 40s </li>
-                <li style="padding: 40;"> that's the general summary of my thoughts.</li>
-            </ul>
-        </main>
-        <img src="https://www.freeiconspng.com/uploads/glass-with-orange-juice-png-0.png"
+    <img src="https://static.vecteezy.com/system/resources/previews/024/508/723/non_2x/frog-isolated-on-background-with-generative-ai-png.png"
             width="400"
             height="300" />
+    <body>
         lalalalalalala
         lalalalalalala
         lalalalalalala
