--- a/index2.html
+++ b/index2.html
@@ -33,5 +33,5 @@
         lalalalalalala
     </body>
 </html>
-//<a href="https://happyhopper.org/"> word we want linked</a>
+<a href="https://happyhopper.org/"> WEEK 1 OH YEAH</a>
 
