--- a/index2.html
+++ b/index2.html
@@ -22,16 +22,7 @@
         <img src="https://www.freeiconspng.com/uploads/glass-with-orange-juice-png-0.png"
             width="400"
             height="300" />
-        lalalalalalala
-        lalalalalalala
-        lalalalalalala
-        lalalalalalala
-        lalalalalalala
-        lalalalalalala
-        lalalalalalala
-        lalalalalalala
-        lalalalalalala
     </body>
 </html>
-<a href="https://happyhopper.org/">a reward for your efforts</a>
+<a style="perspective: 40ch;"> "https://happyhopper.org/">a reward for your efforts</a>
 
