--- a/index2.html
+++ b/index2.html
@@ -24,5 +24,5 @@
             height="300" />
     </body>
 </html>
-<a style="perspective: 40ch;", href="https://happyhopper.org/">a reward for your efforts</a>
+<a style="perspective: 200;", href="https://happyhopper.org/">a reward for your efforts</a>
 
