--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <main style="background-color: rgb(250, 247, 239);">
-        <h1 style="color:rgb(41, 200, 101);">This is the home page to Quinn Hochglaube's very cool site</h1>
+        <h1 style="color:rgb(41, 90, 201);">This is the home page to Quinn Hochglaube's very cool site</h1>
     </body>
     <img src="https://static.vecteezy.com/system/resources/previews/024/508/723/non_2x/frog-isolated-on-background-with-generative-ai-png.png"
             width="400"
@@ -21,5 +21,5 @@
         lalalalalalala
     </body>
 </html>
-//<a href="index2.html"> word we want linked</a>
+<a href="index2.html">WEEK 1 OH YEAH</a>
 
