--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <img src="https://static.vecteezy.com/system/resources/previews/024/508/723/non_2x/frog-isolated-on-background-with-generative-ai-png.png"
             width="400"
             height="300" />
-    <body style="text-align: left;">
+    <body style="text-align: right;">
         lalalalalalala
         lalalalalalala
         lalalalalalala
