--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <body style="background-color: rgb(114, 167, 140);">
         <h1 style="color:rgb(41, 90, 201);">This is the home page to Quinn Hochglaube's very cool site</h1>
     </body>
-    <img src="https://static.vecteezy.com/system/resources/previews/024/508/723/non_2x/frog-isolated-on-background-with-generative-ai-png.png"
+    <body style="text-align: center">
+        <img src="https://static.vecteezy.com/system/resources/previews/024/508/723/non_2x/frog-isolated-on-background-with-generative-ai-png.png"
             width="400"
             height="300" />
+    </body>
     <body style="text-align: right">
         lalalalalalala
         lalalalalalala
