--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <body style="background-color: rgb(114, 167, 140);">
         <h1 style="color:rgb(41, 90, 201);">This is the home page to Quinn Hochglaube's very cool site</h1>
     </body>
-    <body style="text-align: center">
-        <img src="https://static.vecteezy.com/system/resources/previews/024/508/723/non_2x/frog-isolated-on-background-with-generative-ai-png.png"
+    <body>
+        <div style="text-align: center;">
+            <img src="https://static.vecteezy.com/system/resources/previews/024/508/723/non_2x/frog-isolated-on-background-with-generative-ai-png.png"
+            alt="frog"
             width="400"
-            height="300" />
+            height="300"/>
+        </div>
     </body>
     <body style="text-align: right">
         lalalalalalala
