--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyNjZjaW1ydW5lM290a3A0dHZnMnF4dDZ3cHp4MXFkc3dsczA1aTdnNyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/ujpaHBFQxnZIALTObQ/source.gif" alt="fire2" height="50" width="40">
         </h1>
     </body>
-    <body>
+    <body style="font-family: fantasy;">
+        click Gerald the Frog for more info!
         <div style="text-align: center;">
             <img src="https://static.vecteezy.com/system/resources/previews/024/508/723/non_2x/frog-isolated-on-background-with-generative-ai-png.png"
             alt="frog"
