--- a/index2.html
+++ b/index2.html
@@ -2,26 +2,22 @@
     <head>
       <title>Week 1</title>
     </head>
-    <body>
-        <main style="background-color: rgb(250, 247, 239);">
-        <h1 style="color:rgb(41, 200, 101);">ROUND 2: What Quinn thinks of "As We May Think"</h1>
-    </body>
-    <body>
-        <main style="background-color: aquamarine;">
-            <ul style = "font-size: large;">
-                <li>here it is:</li>
-                <li style="background-color: bisque;"> hmmmmmmM</li>
-                <li> hmmmmmmmmMM</li>
-                <li style="background-color: blueviolet;"> just kidding, I just liked the names of the colors thus far featured </li>
-            </ul>
+    <body style="background-color: black;">
+        <h1 style="color:rgb(143, 140, 226);">WEEK 1: What Quinn thinks of "As We May Think"</h1>
+    <p>
+        <div style="text-align: center;">
+         <img style="border:3px solid #fff200" src="https://cdn.pixabay.com/animation/2024/02/08/10/06/10-06-13-48_512.gif"
+            alt="brain"
+            width="400"
+            height="300" />
+    </div>
+        <main>
             <ul style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
-                <li> honestly I think it's crazy that this man was predicting fairly specific technological achievements in the 40s </li>
+                <li> Honestly I think it's crazy that this man was predicting fairly specific technological achievements in the 40s. </li>
                 <li style="padding: 40;"> that's the general summary of my thoughts.</li>
             </ul>
         </main>
-        <img src="https://www.freeiconspng.com/uploads/glass-with-orange-juice-png-0.png"
-            width="400"
-            height="300" />
+    </p>
     </body>
 </html>
 <a style="align-items: end;", href="https://happyhopper.org/">a reward for your efforts</a>
