--- a/index2.html
+++ b/index2.html
@@ -3,16 +3,16 @@
       <title>Week 1</title>
     </head>
     <body style="background-color: black;">
-        <h1 style="color:rgb(143, 140, 226);">WEEK 1: What Quinn thinks of "As We May Think"</h1>
+        <h1 style="color:rgb(143, 140, 226); text-align: center;">WEEK 1: What Quinn thinks of "As We May Think"</h1>
     <p>
         <div style="text-align: center;">
          <img style="border:3px solid #fff200" src="https://cdn.pixabay.com/animation/2024/02/08/10/06/10-06-13-48_512.gif"
             alt="brain"
             width="400"
-            height="300" />
+            height="250" />
     </div>
         <main>
-            <ul style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
+            <ul style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:aliceblue">
                 <li> Honestly I think it's crazy that this man was predicting fairly specific technological achievements in the 40s. </li>
                 <li style="padding: 40;"> that's the general summary of my thoughts.</li>
             </ul>
