--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
             height="250" />
     </div>
         <main>
-            <ul style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:aliceblue">
+            <ul style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(143, 140, 226)">
                 <li> Honestly I think it's crazy that this man was predicting fairly specific technological achievements in the 40s. </li>
                 <li style="padding: 40;"> that's the general summary of my thoughts.</li>
             </ul>
@@ -20,5 +20,6 @@
     </p>
     </body>
 </html>
+<a style="align-items: end; padding: 5px; border: 2px solid #fff200;", href="index.html">back to the very cool home page</a>
 <a style="align-items: end;", href="https://happyhopper.org/">a reward for your efforts</a>
 
