--- a/index2.html
+++ b/index2.html
@@ -21,5 +21,7 @@
     </body>
 </html>
 <a style="align-items: end; padding: 5px; border: 2px solid #fff200;", href="index.html">back to the very cool home page</a>
-<a style="align-items: end;", href="https://happyhopper.org/">a reward for your efforts</a>
-
+<ul>
+    <li style="padding: 5px; border: 2px solid #fff200; text-align: center;", href="index.html">back to the very cool home page</li>
+    <li href="https://happyhopper.org/">a reward for your efforts</li>
+</ul>
