--- a/index2.html
+++ b/index2.html
@@ -20,8 +20,5 @@
     </p>
     </body>
 </html>
-<a style="align-items: end; padding: 5px; border: 2px solid #fff200;", href="index.html">back to the very cool home page</a>
-<ul>
-    <li style="padding: 5px; border: 2px solid #fff200; text-align: center;", href="index.html">back to the very cool home page</li>
-    <li href="https://happyhopper.org/">a reward for your efforts</li>
-</ul>
+<a style="text-align: center; padding: 5px; border: 2px solid #fff200;", href="index.html">back to the very cool home page</a>
+
