--- a/index2.html
+++ b/index2.html
@@ -15,10 +15,10 @@
             <ul style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(143, 140, 226)">
                 <li> Honestly I think it's crazy that this man was predicting fairly specific technological achievements in the 40s. </li>
                 <li style="padding: 40;"> that's the general summary of my thoughts.</li>
+                <li style="text-align: center; padding: 5px; border: 2px solid #fff200;", href="index.html">back to the very cool home page</li>
             </ul>
         </main>
     </p>
     </body>
 </html>
-<a style="text-align: center; padding: 5px; border: 2px solid #fff200;", href="index.html">back to the very cool home page</a>
 
