--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
             This is the home page to Quinn Hochglaube's very cool site
             <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyNjZjaW1ydW5lM290a3A0dHZnMnF4dDZ3cHp4MXFkc3dsczA1aTdnNyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/ujpaHBFQxnZIALTObQ/source.gif" alt="fire2" height="50" width="40">
         </h1>
-    </body>
-    <body style="font-family: fantasy;">
-        click Gerald the Frog for more info!
         <div style="text-align: center;">
             <img src="https://static.vecteezy.com/system/resources/previews/024/508/723/non_2x/frog-isolated-on-background-with-generative-ai-png.png"
             alt="frog"
             width="400"
             height="300"/>
         </div>
-    </body>
-    <body style="text-align: right">
+        <p style="text-align: right">
         lalalalalalala
         lalalalalalala
         lalalalalalala
@@ -28,6 +24,7 @@
         lalalalalalala
         lalalalalalala
         lalalalalalala
+        </p>
     </body>
 </html>
 <a href="index2.html">WEEK 1 OH YEAH</a>
