--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
             </ul>
         </main>
     </p>
-    <a style="text-align: center; padding: 5px; border: 2px solid #fff200; background-color: aliceblue;", href="index.html">back to the very cool home page</a>
+    <a style="text-align: center; padding: 5px; border: 2px solid #fff200; background-color: rgb(180, 190, 225);", href="index.html">back to the very cool home page</a>
     </body>
 </html>
 
