--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
     </div>
         <main>
             <ul style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(143, 140, 226)">
-                <li> Honestly I think it's crazy that this man was predicting fairly specific technological achievements in the 40s. </li>
+                Honestly I think it's crazy that this man was predicting fairly specific technological achievements in the 40s. 
                 <li style="padding: 40;"> that's the general summary of my thoughts.</li>
             </ul>
         </main>
