--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             width="400"
             height="300"/>
         </div>
-        <p style="text-align: right">
+        <p style="text-align: right; color: azure;">
         lalalalalalala
         lalalalalalala
         lalalalalalala
