--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
       <title>Week 2</title>
     </head>
     <body style="background-color: rgb(255, 255, 255);">
-        <h1 style="color:rgb(83, 180, 78); text-align: center;">WEEK 2: What Quinn thinks of "As We May Think"</h1>
+        <h1 style="color:rgb(83, 180, 78); text-align: center;">WEEK 2: </h1>
     <p>
         <main>
         </main>
