--- a/index3.html
+++ b/index3.html
@@ -1,13 +1,28 @@
 <html>
     <head>
-      <title>Week 2</title>
-    </head>
-    <body style="background-color: rgb(255, 255, 255);">
-        <h1 style="color:rgb(83, 180, 78); text-align: center;">WEEK 2: </h1>
-    <p>
-        <main>
+      		<title> 💻 Intro 2 CSS </title>
+		<style type- "text/css">
+			h1 {
+				color: #FF4500
+			}
+
+			body {
+				background: #000080;
+			}
+
+            p {
+                color:white;
+            }
+
+		</style>
+	</head>
+    <body>    
+        <h1>This website!</h1>   
+            <img src="beyonce.png" width="500px">
+            <p>contentcontentcontentcontentcontentcontentcontent
+               
+            </p>
+            
         </main>
-    </p>
     </body>
 </html>
-
