--- a/index3.html
+++ b/index3.html
@@ -11,7 +11,9 @@
 			}
 
             p {
+                background-color: aquamarine;
                 color:white;
+                border: 10px; 
             }
 
 		</style>
