--- a/index3.html
+++ b/index3.html
@@ -11,9 +11,10 @@
 			}
 
             p {
-                background-color: aquamarine;
+                background-color: rgb(184, 11, 31);
                 color:white;
-                border: 10px; 
+                border: solid 10 px;
+                padding: 4vw;  
             }
 
 		</style>
