--- a/index3.html
+++ b/index3.html
@@ -13,7 +13,7 @@
             p {
                 background-color: rgb(184, 11, 31);
                 color:white;
-                border: solid 10 px;
+                border: solid 10 px; color: rebeccapurple;
                 padding: 4vw;  
             }
 
