--- a/index3.html
+++ b/index3.html
@@ -11,9 +11,9 @@
 			}
 
             p {
-                background-color: rgb(184, 11, 31);
-                color:white;
-                border: solid 10 px; color: rebeccapurple;
+                background-color: rgb(255, 255, 255);
+                color:rgb(255,155,155);
+                border: solid 10 px;
                 padding: 4vw;  
             }
 
