--- a/index3.html
+++ b/index3.html
@@ -16,9 +16,14 @@
                 border: solid 10px;
                 padding: 4vw;  
             }
+            /* this is a comment */
             #theSpecial {
                 color: orange;
                 padding: 100px;
+            }
+
+            .theDescription {
+                background-color: green;
             }
 
 		</style>
@@ -32,7 +37,7 @@
             <p id="theSpecial">contentcontentcontentcontentcontentcontentcontent
                
             </p>
-            <p>contentcontentcontentcontentcontentcontentcontent
+            <p class="theDescription">contentcontentcontentcontentcontentcontentcontent
                
             </p>
             <p>contentcontentcontentcontentcontentcontentcontent
