--- a/index3.html
+++ b/index3.html
@@ -1,7 +1,13 @@
 <html>
     <head>
-      		<title> 💻 Intro 2 CSS </title>
-		<style type- "text/css">
+      		<title> 💻 Practice2 </title>
+	
+             /* this is a comment
+            call class with .
+            call id with # 
+            
+            <meta name="viewport" content="width=device-width,initial-scale=1.0"
+            */
 			h1 {
 				color: #FF4500
 			}
@@ -16,7 +22,7 @@
                 border: solid 10px;
                 padding: 4vw;  
             }
-            /* this is a comment */
+
             #theSpecial {
                 color: orange;
                 padding: 100px;
@@ -24,9 +30,10 @@
 
             .theDescription {
                 background-color: green;
+                margin: 250px;
             }
 
-		</style>
+		
 	</head>
     <body>    
         <h1>This website!</h1>   
