--- a/index3.html
+++ b/index3.html
@@ -1,7 +1,7 @@
 <html>
     <head>
       		<title> 💻 Practice2 </title>
-	
+            <link href="theStyle.css" rel="stylesheet"/>
              /* this is a comment
             call class with .
             call id with # 
