--- a/index2.html
+++ b/index2.html
@@ -19,6 +19,8 @@
         </main>
     </p>
     <a style="text-align: center; padding: 5px; border: 2px solid #fff200; background-color: rgb(180, 190, 225);", href="index.html">back to the very cool home page</a>
+    <p></p>
+    <a href="index3.html"></a><button>back to home</button>
     </body>
 </html>
 
