--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
         </main>
     </p>
     <a style="text-align: center; padding: 5px; border: 2px solid #fff200; background-color: rgb(180, 190, 225);", href="index.html">back to the very cool home page</a>
-    <p></p>
+    <p><link href="theStyle.css" rel="stylesheet"/></p>
     <a href="index3.html"></a><button>back to home</button>
     </body>
 </html>
