--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
             </ul>
         </main>
     <a style="text-align: center; padding: 5px; border: 2px solid #fff200; background-color: rgb(180, 190, 225);", href="index.html">back to the very cool home page</a>
-    <p><link href="theStyle.css" rel="stylesheet"/></p>
+    <link href="theStyle.css" rel="stylesheet"/>
     <a href="index.html"><button>back to home</button></a>
     </body>
 </html>
