--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     </head>
     <body style="background-color: rgb(114, 167, 140);">
         <h1 style="color:rgb(41, 90, 201); text-align: center;">
-            <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyNjZjaW1ydW5lM290a3A0dHZnMnF4dDZ3cHp4MXFkc3dsczA1aTdnNyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/ujpaHBFQxnZIALTObQ/source.gif" alt="fire1" height="50" width="40">
+            <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyNjZjaW1ydW5lM290a3A0dHZnMnF4dDZ3cHp4MXFkc3dsczA1aTdnNyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/ujpaHBFQxnZIALTObQ/source.gif" alt="fire1" width="40">
             This is the home page to Quinn Hochglaube's very cool site
-            <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyNjZjaW1ydW5lM290a3A0dHZnMnF4dDZ3cHp4MXFkc3dsczA1aTdnNyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/ujpaHBFQxnZIALTObQ/source.gif" alt="fire2" height="50" width="40">
+            <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyNjZjaW1ydW5lM290a3A0dHZnMnF4dDZ3cHp4MXFkc3dsczA1aTdnNyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/ujpaHBFQxnZIALTObQ/source.gif" alt="fire2" width="40">
         </h1>
         <div style="text-align: center;">
             <img src="https://static.vecteezy.com/system/resources/previews/024/508/723/non_2x/frog-isolated-on-background-with-generative-ai-png.png"
