--- a/indexp.html
+++ b/indexp.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-      		<title> Week 2</title>
+      		<title> 💻 Practice2 </title>
             <link href="theStyle.css" rel="stylesheet"/>
-			<!--- h1 {
+			h1 {
 				color: #FF4500
 			}
 
@@ -26,7 +26,7 @@
                 background-color: green;
                 margin: 250px;
             }
---->
+
 		
 	</head>
     <body>    
