--- a/index3.html
+++ b/index3.html
@@ -30,7 +30,8 @@
 		
 	</head>
     <body>    
-        <h1>This website!</h1>   
+        <h1>Free the Internet!</h1> 
+        <h4> ...maybe?</h4>  
             <img src="beyonce.png" width="500px">
             <p>contentcontentcontentcontentcontentcontentcontent
                
