--- a/index3.html
+++ b/index3.html
@@ -31,7 +31,7 @@
 	</head>
     <body>    
         <h1>Free the Internet!</h1> 
-        <h4 color: #FF4500> ...maybe?</h4>  
+        <h4 style="color: #FF4500"> ...maybe?</h4>  
             <img src="beyonce.png" width="500px">
             <p>contentcontentcontentcontentcontentcontentcontent
                
