--- a/index3.html
+++ b/index3.html
@@ -32,7 +32,7 @@
     <body>    
         <h1>Free the Internet!</h1> 
         <h4 style="color: #FF4500"> ...maybe?</h4>  
-            <img src="beyonce.png" width="500px">
+            <img src="https://tunersys.com/cdn/shop/articles/20210203-BIA_2402.png?v=1673802360" width="500px">
             <p>contentcontentcontentcontentcontentcontentcontent
                
             </p>
