--- a/index3.html
+++ b/index3.html
@@ -33,7 +33,16 @@
         <h1>Free the Internet!</h1> 
         <h4 style="color: #FF4500"> ...maybe?</h4>  
             <img src="https://tunersys.com/cdn/shop/articles/20210203-BIA_2402.png?v=1673802360" width="500px">
-            <p>contentcontentcontentcontentcontentcontentcontent
+            <p> In "Long Live the Web" Tim Berners-Lee preaches that the internet must remain uncensored 
+                if it is to remain for the people -- no caveats, no exceptions. This struck me as very Kantian
+                because if the internet is to remain an open resource for the people, should we not 
+                try to eliminate hate speech? What about misinformation? I understand the concept that 
+                people to some extent must figure out what they believe for themselves -- and to do so 
+                must be exposed to a variety of information and media -- but particularly in an era of 
+                unchecked AI and social unrest it feels like <i>something</i> must be done. In response
+                to this, I think the Mozilla Manifesto advocates for a respectful and productive environment. 
+                However, I noticed there wasn't really an action plan. I get it -- it's difficult, I have 
+                no concrete ideas, but to improve we must start somewhere. 
                
             </p>
             <p id="theSpecial"><a href="index2.html">contentcontentcontentcontentcontentcontentcontent</a>
