--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             width="400"
             height="300"/>
         </div>
-        <p style="text-align: right; color: azure;">
+        <!--<p style="text-align: right; color: azure;">
         lalalalalalala
         lalalalalalala
         lalalalalalala
@@ -24,10 +24,12 @@
         lalalalalalala
         lalalalalalala
         lalalalalalala
-        </p>
+        </p> -->
     </body>
 </html>
+<section style="text-align: center;">
 <a href="index2.html">WEEK 1 OH YEAH</a>
 <p></p>
 <a href="index3.html">WEEK 2</a>
+</section>
 
