--- a/index2.html
+++ b/index2.html
@@ -12,13 +12,13 @@
     </div>
         <main>
             <ul style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(143, 140, 226)">
-                Honestly I think it's crazy that this man was predicting fairly specific technological achievements in the 40s. Van Buren discusses modern cameras, computers, and data sharing all with a fair amount of accuracy that was shocking to me given it's time. 
+                Honestly I think it's crazy that this man was predicting fairly specific 
+                technological achievements in the 40s. Bush discusses modern cameras, 
+                computers, and data sharing all with a fair amount of accuracy that was shocking to me given it's time. 
                 <li style="padding: 40;"> that's the general summary of my thoughts.</li>
             </ul>
         </main>
     <a style="text-align: center; padding: 5px; border: 2px solid #fff200; background-color: rgb(180, 190, 225);", href="index.html">back to the very cool home page</a>
-    <link href="theStyle.css" rel="stylesheet"/>
-    <a href="index.html"><button>back to home</button></a>
     </body>
 </html>
 
