--- a/index3.html
+++ b/index3.html
@@ -2,13 +2,13 @@
     <head>
       		<title> Week 2</title>
 	</head>
-    <body style="background: linear-gradient(to top, #000080, #adbddf)">    
-        <h1 style="color: #FF4500">Free the Internet!</h1> 
-        <h4 style="color: #FF4500"> ...maybe?</h4> 
+    <body style="background: linear-gradient(to top, #000080, #adbddf); border: 5px solid #FF4500;">    
+        <h1 style="color: #FF4500; padding-left: 10px;">Free the Internet!</h1> 
+        <h4 style="color: #FF4500; padding-left: 10px;"> ...maybe?</h4> 
         <div style="text-align: center;" >
             <img src="https://tunersys.com/cdn/shop/articles/20210203-BIA_2402.png?v=1673802360" width="500px">
         </div>
-        <div style="text-align: right;">
+        <div style="text-align: right; padding-right: 10px; padding-top: 10px;">
             <h6 style="color: #FF4500">Thoughts from Week 2 by Quinn Hochglaube </h6style>
         </div>
         <section style="max-width: 600; margin:auto; text-align:center;">
@@ -29,8 +29,8 @@
                 I get it -- it's difficult, I make no claim to have concrete ideas or solutions, but to improve 
                 we must start somewhere. 
             </p>
-            <link href="theStyle.css" rel="stylesheet"/>
-            <a href="index.html"><button>Back to the awesome home page!</button></a>
+                <link href="theStyle.css" rel="stylesheet"/>
+                <a href="index.html"><button style="text-align: right;">Back to the awesome home page!</button></a>
         </section>
         </main>
     </body>
