--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
       		<title> Week 2</title>
 	</head>
     <body style="background: linear-gradient(to top, #000080, #adbddf); border: 5px solid #FF4500;">    
-        <h1 style="color: #FF4500; padding-left: 10px;">Free the Internet!</h1> 
+        <h1 style="color: #adbddf; text-shadow:-2px -2px 0 #FF4500, 2px -2px 0 #FF4500, -2px 2px 0 #FF4500, 2px 2px 0 #FF4500;  padding-left: 10px;">Free the Internet!</h1> 
         <h4 style="color: #FF4500; padding-left: 10px;"> ...maybe?</h4> 
         <div style="text-align: center;" >
             <img src="https://tunersys.com/cdn/shop/articles/20210203-BIA_2402.png?v=1673802360" width="500px">
@@ -18,7 +18,7 @@
                 padding: 4vw; 
                 border-radius: 4px;
                 text-align: justify;"> In "Long Live the Web" Tim Berners-Lee preaches that the internet must remain uncensored 
-                if it is to remain for the people -- no caveats, no exceptions. This struck me as very Kantian
+                if it is to remain for the people -- no caveats, no exceptions. This struck me as very <a href="Kant.html">Kantian</a>
                 in its rigidity. If the internet is to remain an open resource for the people, should we not 
                 try to eliminate hate speech? What about misinformation? I understand the concept that 
                 people to some extent must figure out what they believe for themselves -- and to do so 
