--- a/Kant copy.html
+++ b/Kant copy.html
@@ -20,7 +20,7 @@
         <div style="position: fixed; bottom: 0; right: 0;">
         <h4 style="color: #ffffff; text-align: right; padding-top: 200px; padding-right: 10px; max-width: 400px;">Honestly, I'm not sure! (I think yes!)
             What do I mean by all this? Fun fact about Quinn (creator of this awesome and confusing site): I used to
-            be a ~philosophy~ major. Oh yeah. #facts. This guy Kant, he was real and honestly he did some crazy
+            be a ~philosophy(ish)~ major. Oh yeah. #facts. This guy Kant, he was real and honestly he did some crazy
             wack stuff BUT he was known, in part, for being really rigid in his rules. Ultimately, dude just wanted
             to have a step by step process for how to lead the most lit life possible. We know now such a plan does not
             exist. Womp womp. But, for an 18th century rich white guy with too much time on his hands, what else could
