--- a/Kant copy.html
+++ b/Kant copy.html
@@ -8,7 +8,7 @@
                 box-sizing: border-box;
                 min-height: 100vh;
 
-                background-image: url('https://upload.wikimedia.org/wikipedia/commons/a/a2/Immanuel_Kant_portrait_c1790.jpg');
+                background-image: url('https://www.angelacameron.com/cdn/shop/products/Cloud-Nine-ACFA_1024x1024.jpg?v=1623612022');
                 background-attachment: fixed;
                 background-size: cover;
                 background-position: center;
@@ -17,15 +17,19 @@
         </style>
 	</head>
     <body>
+        <p style="padding: 10px;">
+            <a href="index.html"><button style="text-align: right; padding: 10 px; background-color: yellow; border-color: orangered;">Thanks, but really no thanks.</button></a>
+        </p>
+        <div style="text-align:center;">
+        </div>
         <div style="position: fixed; bottom: 0; right: 0;">
-        <h4 style="color: #ffffff; text-align: right; padding-top: 200px; padding-right: 10px; max-width: 400px;">Honestly, I'm not sure! (I think yes!)
+            <h4 style="color: #232731; text-align: right; padding-top: 200px; padding-right: 10px; max-width: 400px;">Honestly, I'm not sure! (I think yes!)
             What do I mean by all this? Fun fact about Quinn (creator of this awesome and confusing site): I used to
             be a ~philosophy(ish (it's complicated))~ major. Oh yeah. #facts. This guy Kant, he was real and honestly he did some crazy
             wack stuff BUT he was known, in part, for being really rigid in his rules. Ultimately, dude just wanted
             to have a step by step process for how to lead the most lit life possible. We know now such a plan does not
             exist. Womp womp. But, for an 18th century rich white guy with too much time on his hands, what else could
             he attempt to offer the world? Thanks (but no thanks) Kant! </h4> 
-            </div>
-        </main>
+        </div>
     </body>
 </html>
