--- a/week3/rand.html
+++ b/week3/rand.html
@@ -13,8 +13,7 @@
         <main>
             <header></header>
             <br>
-            
-        <div style="text-align: center;">
+        <div style="justify-content: center;">
             <p>Oh</p>
             <p>I know</p>
             <p>such</p>
