--- a/week3/rand.html
+++ b/week3/rand.html
@@ -9,11 +9,11 @@
         <link href="randStyle.css" rel="stylesheet" />   
     </head>
 
-    <body>
+    <body style="justify-items: center;">
         <main>
             <header></header>
             <br>
-        <div style="justify-content: center;">
+        <div style="justify-items: flex-start;">
             <p>Oh</p>
             <p>I know</p>
             <p>such</p>
