--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
 <a href="index2.html">WEEK 1 OH YEAH</a>
 <p></p>
 <a href="index3.html">WEEK 2</a>
+<p></p>
+<a href="week3/rand.html">WEEK 3</a>
 </section>
 
