--- a/week3/index.html
+++ b/week3/index.html
@@ -6,20 +6,17 @@
         <!-- link to the external style sheet to style multiple pages -->
         <link href="theStyle.css" rel="stylesheet" />   
     </head>
-    <body> 
-        <main>
-        <div style="text-align: center;"> 
-            <p>D</p>
-            <p>A</p>
-            <p>D</p>
-            <p>A</p>
-          </div>
-          
-          <div id="theBackward"> 
-            <p>D</p>
-            <p>A</p>
-           <p>D</p>
-           <p>A</p>
+    <body style="align-items: center;"> 
+        <main class="poster">
+            <div class="bg">D</div>
+            <div class="bg">A</div>
+            <div class="bg">D</div>
+            <div class="bg">A</div>
+
+            <div class="fg">D</div>
+            <div class="fg">A</div>
+            <div class="fg">D</div>
+            <div class="fg">A</div>
           </div>
         </main>
 
