--- a/week3/index.html
+++ b/week3/index.html
@@ -8,10 +8,10 @@
     </head>
     <body style="align-items: center;"> 
         <main class="poster">
-            <div class="bg">D</div>
-            <div class="bg">A</div>
-            <div class="bg">D</div>
-            <div class="bg">A</div>
+            <div class="b">D</div>
+            <div class="b">A</div>
+            <div class="b">D</div>
+            <div class="b">A</div>
 
             <div class="fg">D</div>
             <div class="fg">A</div>
