--- a/week3/rand.html
+++ b/week3/rand.html
@@ -31,6 +31,21 @@
             <p>much</p>
             <p>more.</p>
         </div>
+        
+        </div>
+        <div style="display: inline-block;
+         width: 20px;
+         height: 10rem;
+         background-color: red;
+         border-radius: 5%;
+        "></div>
+        <a href="https://quinn-hoch.github.io/index.html"><button>home</button></a>
+        <div style="
+            display:inline-block;
+            width: 20px;
+            height: 10rem;
+            background-color: red;">
+        </div>
         </main>
     </body>
         
