--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </body>
 </html>
 <section style="text-align: center;">
-<a href="index2.html">WEEK 1 OH YEAH</a>
+<a href="week1/index2.html">WEEK 1 OH YEAH</a>
 <p></p>
-<a href="index3.html">WEEK 2</a>
+<a href="week2/index3.html">WEEK 2</a>
 <p></p>
-<a href="week3/rand.html">WEEK 3</a>
+<a href="week3/rand.html">Paul Rand Exerices</a>
 </section>
 
