--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 <p></p>
 <a href="week2/index3.html">WEEK 2</a>
 <p></p>
-<a href="week3/rand.html">Paul Rand Exerices</a>
+<a href="week3/rand.html">Paul Rand Exercise</a>
 </section>
 
