--- a/week1/index2.html
+++ b/week1/index2.html
@@ -18,7 +18,7 @@
                 <li style="padding: 40;"> that's the general summary of my thoughts.</li>
             </ul>
         </main>
-    <a style="text-align: center; padding: 5px; border: 2px solid #fff200; background-color: rgb(180, 190, 225);", href="index.html">back to the very cool home page</a>
+    <a style="text-align: center; padding: 5px; border: 2px solid #fff200; background-color: rgb(180, 190, 225);", href="https://quinn-hoch.github.io/index.html">back to the very cool home page</a>
     </body>
 </html>
 
