--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
 <a href="week2/index3.html">WEEK 2</a>
 <p></p>
 <a href="week3/rand.html">Paul Rand Exercise</a>
+<p></p>
+<a href="week3/indexreal.html">WEEK 3</a>
 </section>
 
