--- a/week2/index3.html
+++ b/week2/index3.html
@@ -30,7 +30,7 @@
                 we must start somewhere. 
             </p>
                 <link href="theStyle.css" rel="stylesheet"/>
-                <a href="index.html"><button style="text-align: right;">Back to the awesome home page!</button></a>
+                <a href="https://quinn-hoch.github.io/index.html"><button style="text-align: right;">Back to the awesome home page!</button></a>
         </section>
         </main>
     </body>
