--- a/week3/indexreal.html
+++ b/week3/indexreal.html
@@ -6,24 +6,86 @@
     <img style="width: 100vw;"src='https://cdn.pixabay.com/photo/2017/10/14/12/05/mirrors-2850352_640.png';>
     <body>
         <div>
-        <img id="image" class="fix" src=
+        <img id="image1" class="fix" src=
 "https://static.vecteezy.com/system/resources/thumbnails/046/598/406/small_2x/glass-salt-shaker-with-metal-lid-and-white-salt-on-transparent-background-png.png"
-            alt="Salt shaker" />
-        <img id="cake" class="fix" src=
+            alt="salt" />
+        <img id="image2" class="fix1" src=
 "https://png.pngtree.com/png-clipart/20240103/original/pngtree-birthday-cake-png-image_14005993.png"
-            alt="cakeimage" style="width: 20vw;"/>
+            alt="cake" style="width: 30vw;"/>
+        <img id="image3" class="fix2" src=
+"https://static-mpm-optimized.s3.eu-west-2.amazonaws.com/1f689deb-df48-4de7-b6d4-119cd58eafcd_large.png"
+            alt="phone" style="width: 35vw;"/>
+        <img id="image5" class="fix4" src=
+"https://static.wikia.nocookie.net/ipdkverse/images/d/d8/John_F._Kennedy_1.png/revision/latest?cb=20210707192101"            
+        alt="president" style="width: 15vw;"/>
+        <img id="image6" class="fix5" src=
+"https://purepng.com/public/uploads/large/purepng.com-eyeeyesorgans-of-the-visual-systemorganisms-visionoptical-systemlightfocuseslensblue-1421526883186sbnfm.png"
+        alt="eye" style="width: 20vw;"/>
+        <img id="image7" class="fix6" src=
+"https://purepng.com/public/uploads/large/purepng.com-eyeeyesorgans-of-the-visual-systemorganisms-visionoptical-systemlightfocuseslensblue-1421526883186sbnfm.png"
+        alt="eye2" style="width: 12vw;"/>
+        <img id="image8" class="fix7" src=
+"https://purepng.com/public/uploads/large/purepng.com-mirrormirrorspeculumlookinlooking-glass-1701527941267fodjo.png"
+        alt="mirror" style="width: 50vw;"/>
+        <img id="image4" class="fix3" src=
+"https://pngimg.com/d/magazine_PNG44.png"
+            alt="zine" style="width: 70vw;"/>
+        <img id="image9" class="fix8" src=
+"https://static.vecteezy.com/system/resources/thumbnails/054/314/913/small_2x/colgate-tooth-paste-on-transparent-background-free-png.png"
+        alt="toothpaste" style="width: 20vw;"/>
+        <img id="image10" class="fix9" src=
+"https://static.vecteezy.com/system/resources/thumbnails/010/870/081/small/man-hand-gesture-isolated-png.png"
+        alt="hand" style="width: 20vw;"/>
+        <img id="image11" class="fix5" src=
+"https://www.freeiconspng.com/uploads/pencil-png-image--pencil-png-image-0.png"
+        alt="pencil" style="width: 30vw;"/>
+        <img id="image12" class="fix10" src=
+"https://www.freeiconspng.com/uploads/horse-png-5.png" 
+       alt="horse" style="width: 40vw;"/>
+       <img id="image13" class="fix" src=
+"https://purepng.com/public/uploads/large/lollipop-candy-wnm.png"
+       alt="pop" style="width: 18vw;"/>
+       <img id="image14" class="fix12" src=
+"https://png.pngtree.com/png-clipart/20240921/original/pngtree-human-heart-png-image_16060293.png"
+       alt="heart" style="width: 18vw;"/>
+       <img id="image15" class="fix11" src=
+"https://static.vecteezy.com/system/resources/thumbnails/010/870/081/small/man-hand-gesture-isolated-png.png"
+        alt="hand2" style="width: 12vw;"/>
+        <img id="image16" class="fix" src=
+"https://www.pngarts.com/files/4/Sneaker-PNG-Image.png"
+        alt="shoe" style="width: 19vw;"/>
+        <img id="image17" class="fix14" src=
+"https://png.pngtree.com/png-vector/20250115/ourmid/pngtree-fresh-pineapple-with-slices-and-splash-of-juice-in-photorealistic-detail-png-image_15202676.png"
+        alt="pineapple" style="width: 16vw;"/>
+        <img id="image18" class="fix15" src=
+"https://cdn.gardengrocer.com/attachments/photos/high_res/605.png?6984"
+        alt="chips" style="width: 30vw;"/>
+        <img id="image19" class="fix14" src=
+"https://purepng.com/public/uploads/large/purepng.com-hammerhammerscoldstrike-agairon-hammer-1701527869944m523s.png"
+        alt="hammer" style="width: 30vw;"/>
+        <img id="image20" class="fix13" src=
+"https://static.wikia.nocookie.net/mario/images/d/dc/Mario_%282%29.png/revision/latest?cb=20250720063134"
+        alt="mario" style="width: 30vw;"/>
+        <img id="image7" class="fix" src=
+"https://purepng.com/public/uploads/large/purepng.com-eyeeyesorgans-of-the-visual-systemorganisms-visionoptical-systemlightfocuseslensblue-1421526883186sbnfm.png"
+        alt="eye2" style="width: 42vw;"/>
+
     </div>
-    <button onclick="show()" id="btnID"
-    style="align-self: center; font-family: cursive; color: rgb(255, 13, 211)">
+    <button onclick="show()" id="button1"
+    style="align-self: center; font-family: cursive; color: rgb(255, 13, 211); font-size: xx-large;">
     THE MEDIUM IS THE MASSAGE
     </button>
-    <button onclick="show1()" id="button2">massage?</button>
-    <button onclick="show1()" id="button3">message**</button>
+    <button onclick="show1()" id="button2">"massage"?</button>
+    <button onclick="show2()" id="button3">message**</button>
+    <button onclick="show3()" id="button4" style="align-self: center; font-family: cursive; color: rgb(255, 13, 211)">THE MEDIUM IS THE MESSAGE</button>
+    <button onclick="show4()" id="button5">No no no no no no no no</button>
+    <button onclick="show5()" id="button6">The medium is the <b>MASSAGE</b>!</button>
+    <a href="indexsecond.html"><button id="button7">Really, it's the massage.</button>
     <script>
         function show() {
-            document.getElementById('image')
+            document.getElementById('image1')
                 .style.display="block";
-            document.getElementById('btnID')
+            document.getElementById('button1')
                 .style.display="none";
             document.getElementById('button2')
                 .style.display="block";
@@ -33,9 +95,72 @@
                 .style.display="none";
             document.getElementById('button3')
                 .style.display="block";
-            document.getElementById('cake')
+            document.getElementById('image2')
+                .style.display="block";
+            document.getElementById('image3')
                 .style.display="block";
         }
+        function show2() {
+            document.getElementById('button3')
+                .style.display="none";
+            document.getElementById('button4')
+                .style.display="block";
+            document.getElementById('image8')
+                .style.display="block";
+            document.getElementById('image5')
+                .style.display="block";
+            document.getElementById('image6')
+                .style.display="block";
+        }
+        function show3() {
+            document.getElementById('button4')
+                .style.display="none";
+            document.getElementById('button5')
+                .style.display="block";
+            document.getElementById('image7')
+                .style.display="block";
+            document.getElementById('image4')
+                .style.display="block";
+            document.getElementById('image9')
+                .style.display="block";
+            document.getElementById('image10')
+                .style.display="block";
+        }
+        function show4() {
+            document.getElementById('button5')
+                .style.display="none";
+            document.getElementById('button6')
+                .style.display="block";
+            document.getElementById('image11')
+                .style.display="block";
+            document.getElementById('image12')
+                .style.display="block";
+            document.getElementById('image13')
+                .style.display="block";
+            document.getElementById('image14')
+                .style.display="block";
+            document.getElementById('image15')
+                .style.display="block";
+        }
+        function show5() {
+            document.getElementById('button6')
+                .style.display="none";
+            document.getElementById('button7')
+                .style.display="block";
+            document.getElementById('image16')
+                .style.display="block";
+            document.getElementById('image17')
+                .style.display="block";
+            document.getElementById('image18')
+                .style.display="block";
+            document.getElementById('image19')
+                .style.display="block";
+            document.getElementById('image20')
+                .style.display="block";
+            document.getElementById('image21')
+                .style.display="block";
+        }
+        
     </script>
         
     </body>
