--- a/week2/Kant copy.html
+++ b/week2/Kant copy.html
@@ -18,7 +18,7 @@
 	</head>
     <body>
         <p style="padding: 10px;">
-            <a href="index.html"><button style="text-align: right; padding: 10 px; background-color: yellow; border-color: orangered;">Thanks, but really no thanks.</button></a>
+            <a href="https://quinn-hoch.github.io/index.html"><button style="text-align: right; padding: 10 px; background-color: yellow; border-color: orangered;">Thanks, but really no thanks.</button></a>
         </p>
         <div style="text-align:center;">
         </div>
