--- a/week3/indexreal.html
+++ b/week3/indexreal.html
@@ -15,8 +15,7 @@
 "https://static-mpm-optimized.s3.eu-west-2.amazonaws.com/1f689deb-df48-4de7-b6d4-119cd58eafcd_large.png"
             alt="phone" style="width: 35vw;"/>
         <img id="image5" class="fix4" src=
-"https://static.wikia.nocookie.net/ipdkverse/images/d/d8/John_F._Kennedy_1.png/revision/latest?cb=20210707192101"            
-        alt="president" style="width: 15vw;"/>
+"jfk.webp"        alt="president" style="width: 15vw;"/>
         <img id="image6" class="fix5" src=
 "https://purepng.com/public/uploads/large/purepng.com-eyeeyesorgans-of-the-visual-systemorganisms-visionoptical-systemlightfocuseslensblue-1421526883186sbnfm.png"
         alt="eye" style="width: 20vw;"/>
