--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
 <a href="week3/rand.html">Paul Rand Exercise</a>
 <p></p>
 <a href="week3/indexreal.html">WEEK 3</a>
+<p></p>
+<a href="week4/index0.html">WEEK 4</a>
 </section>
 
