--- a/week4/index.html
+++ b/week4/index.html
@@ -27,7 +27,7 @@
             To own something is to be envied-or at least, to seek to be envied. 
             And, to be envied is to be in the ultimate sense of the word, "glamourous". If there
             is one thing to take from Berger, it is the constant state of persuing "glamour"
-            that we all inhabit.
+            that we all inhabit. As Berger states—we cannot live without it.
              </p>
             </div>
             <a href="https://quinn-hoch.github.io/index.html"><button>Home<br/><img src="https://www.freeiconspng.com/uploads/teeth-mouth-transparent-png-3.png" style="width: 40vw; max-width: 100px;"></button></a>
