--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
 <a href="week3/indexreal.html">WEEK 3</a>
 <p></p>
 <a href="week4/index0.html">WEEK 4</a>
+<p></p>
+<a href="exp/index.html">Java Exercise</a>
 </section>
 
