--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <p></p>
 <a href="week4/index0.html">WEEK 4</a>
 <p></p>
-<a href="exp/index.html">Java Exercise</a>
+<a href="exp/index.html">Java Exercise/Whole Earth Response</a>
 <p></p>
-<a href="SocialDilema/index.html">Social Dilema Response</a>
+<a href="SocialDilema/index.html">Social Dilemma Response</a>
 </section>
 
