--- a/SemesterAuditProposal/fin.html
+++ b/SemesterAuditProposal/fin.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h3>Comments, questions, concerns?</h3>
-        <a href="https://quinn-hoch.github.io/SemesterAuditProposal/proposal.html"></a><button id="back">Back</button>
+        <a href="https://quinn-hoch.github.io/SemesterAuditProposal/proposal.html"><button id="back">Back</button></a>
     </body>
 </html>
