--- a/SemesterAuditProposal/highlights:challenges.html
+++ b/SemesterAuditProposal/highlights:challenges.html
@@ -21,8 +21,8 @@
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/f/f7/Generic_error_message.png">
 
-    <a href="https://quinn-hoch.github.io/SemesterAuditProposal/proposal.html"></a><button id="next">Next</button>
-    <a href="https://quinn-hoch.github.io/SemesterAuditProposal/semestersummary.html"></a><button id="back">Back</button>
+    <a href="https://quinn-hoch.github.io/SemesterAuditProposal/proposal.html"><button id="next">Next</button></a>
+    <a href="https://quinn-hoch.github.io/SemesterAuditProposal/semestersummary.html"><button id="back">Back</button></a>
     </body>
     </body>
 </html>
