--- a/SemesterAuditProposal/semestersummary.html
+++ b/SemesterAuditProposal/semestersummary.html
@@ -112,7 +112,7 @@
   </div>
 
 </div>
-        <a href="https://quinn-hoch.github.io/SemesterAuditProposal/title.html"></a><button id="back">Back</button>
-        <a href="https://quinn-hoch.github.io/SemesterAuditProposal/highlights:challenges.html"></a><button id="next">Next</button>
+        <a href="https://quinn-hoch.github.io/SemesterAuditProposal/title.html"><button id="back">Back</button></a>
+        <a href="https://quinn-hoch.github.io/SemesterAuditProposal/highlights:challenges.html"><button id="next">Next</button></a>
     </body>
 </html>
