--- a/SemesterAuditProposal/title.html
+++ b/SemesterAuditProposal/title.html
@@ -6,6 +6,6 @@
     <body>
        <h1> Semester Audit & Final Project Proposal </h1>
        <h4>Fall 2025 Quinn Hochglaube</h4>
-       <a href="https://quinn-hoch.github.io/SemesterAuditProposal/semestersummary.html"></a><button id="next">Next</button>
+       <a href="https://quinn-hoch.github.io/SemesterAuditProposal/semestersummary.html"><button id="next">Next</button></a>
     </body>
 </html>
