--- a/SemesterAuditProposal/proposal.html
+++ b/SemesterAuditProposal/proposal.html
@@ -32,7 +32,7 @@
   - clicking different next buttons, hidden buttons, interactive elements
   </div>
 </div>
-        <a href="https://quinn-hoch.github.io/SemesterAuditProposal/fin.html"></a><button id="next">Next</button>
-        <a href="https://quinn-hoch.github.io/SemesterAuditProposal/highlights:challenges.html"></a><button id="back">Back</button>
+        <a href="https://quinn-hoch.github.io/SemesterAuditProposal/fin.html"><button id="next">Next</button></a>
+        <a href="https://quinn-hoch.github.io/SemesterAuditProposal/highlights:challenges.html"><button id="back">Back</button></a>
     </body>
 </html>
