--- a/FINAL/comic.html
+++ b/FINAL/comic.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Interactive Flipbook with Buttons</title>
-
+<title>Flipbook</title>
+<link rel="stylesheet" href="theStyle.css"> 
 <style>
     body {
         display: flex;
@@ -15,70 +13,7 @@
         background: #f2f2f2;
         font-family: sans-serif;
     }
-
-    #flipbook {
-        width: 320px;
-        height: 780px;
-        perspective: 1500px;
-        position: relative;
-    }
-
-    .page {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        transform-origin: left center;
-        transition: transform 0.8s ease;
-        box-shadow: 0 0 8px rgba(0,0,0,0.2);
-        background-size: cover;
-        background-position: center;
-        backface-visibility: hidden;
-    }
-
-    .flipped {
-        transform: rotateY(-180deg);
-    }
-
-   
-    .hotspot-btn {
-        position: absolute;
-        padding: 8px 14px;
-        background: rgba(0, 106, 255, 0.85);
-        color: white;
-        border-radius: 6px;
-        cursor: pointer;
-        font-size: 14px;
-        transition: 0.2s;
-        border: 2px solid #003f8c;
-        text-align: center;
-        white-space: nowrap;
-        user-select: none;
-    }
-
-    .hotspot-btn:hover {
-        background: rgba(0, 140, 255, 1);
-        transform: scale(1.08);
-    }
-
-    #controls {
-        position: absolute;
-        bottom: 20px;
-        display: flex;
-        gap: 10px;
-    }
-
-    button {
-        padding: 8px 14px;
-        background: #333;
-        color: white;
-        border: none;
-        cursor: pointer;
-        border-radius: 4px;
-    }
-
-    button:hover {
-        background: #555;
-    }
+    
 </style>
 </head>
 
@@ -87,11 +22,12 @@
 <div id="flipbook"></div>
 
 <div id="controls">
-    <button onclick="prevPage()">Prev</button>
-    <button onclick="nextPage()">Next</button>
+    <button class="nextback" onclick="prevPage()">Prev</button>
+    <button class="nextback" onclick="nextPage()">Next</button>
 </div>
 
 <script>
+
 const imagePaths = [
     "images/page1.jpg",
     "images/page2.jpg",
@@ -106,12 +42,13 @@ const imagePaths = [
 ];
 
 const buttons = [
-    /* { page: 0, x: 40,  y: 300, text: "what's this?", url: "first.html" },
-    { page: 0, x: 250, y: 120, text: "", url: ".html" },
-
-    { page: 2, x: 150, y: 200, text: "", url: ".html" }, */
-
-    { page: 7, x: 230, y: 520, text: "more", url: "books.html" }
+    { page: 1, x:205,  y: 70, text: "what's this?", url: "first.html" },
+    { page: 3, x: 130, y: 438, text: "a", url: "words.html" },
+    { page: 5, x: 10, y: 407, text: "b", url: "phone.html" },
+   { page: 6, x: 35, y: 120, text: "what are you doing on your phone?", url: "words.html" },
+   { page: 6, x: 290, y: 255, text: "c", url: "girlf.html" },
+   { page: 7, x: 1, y: 25, text: "d", url: "thisguy.html" },
+    { page: 7, x: 1, y: 410, text: "e", url: "books.html" }
 ];
 
 const flipbook = document.getElementById("flipbook");
@@ -146,6 +83,10 @@ function nextPage() {
     if (currentPage < pages.length) {
         pages[currentPage].classList.add("flipped");
         currentPage++;
+    } else {
+        // reached end → reset flipbook
+        pages.forEach(p => p.classList.remove("flipped"));
+        currentPage = 0;
     }
 }
 
@@ -153,10 +94,26 @@ function prevPage() {
     if (currentPage > 0) {
         currentPage--;
         pages[currentPage].classList.remove("flipped");
+    } else {
+        // at start → flip all pages to reach the end
+        pages.forEach(p => p.classList.add("flipped"));
+        currentPage = pages.length;
     }
 }
 
 createFlipbook();
+
+function getStartPage() {
+    const params = new URLSearchParams(window.location.search);
+    const page = parseInt(params.get("page"));
+    return isNaN(page) ? 0 : page;
+}
+
+const startPage = getStartPage();
+for (let i = 0; i < startPage; i++) {
+    nextPage();
+}
+
 </script>
 
 </body>
