--- a/FINAL/first.html
+++ b/FINAL/first.html
@@ -6,7 +6,7 @@
       body {
         margin: 0;
         padding: 0;
-        background-image: url("CC.jpg");
+        background-image: url("images/first.jpg");
         background-size: contain;        
         background-repeat: no-repeat;  
         background-position: center;   
@@ -16,10 +16,8 @@
       <script src="theMedium.js" defer></script>
     </head>
     <body>
-        <div class="typing-wrapper">
- <a href="comic.html"><p id="line1" class="line1"></p></a>
-  <p id="line2" class="line2"></p>
-</div>
+    <a href="comic.html?page=1"><button id="back">Back to main storyline</button></a>
+
     </body>
 </html>
 
