--- a/FINAL/phone.html
+++ b/FINAL/phone.html
@@ -2,23 +2,22 @@
     <head>
       <title> Home </title>
       <link rel="stylesheet" href="theStyle.css"> 
-    <style>
-      body {
-    margin: 0;
-    padding: 0;
-    background-image: url("Context.jpg");
-    background-size: contain;        
-    background-repeat: no-repeat;  
-    background-position: center;   
-    overflow: hidden;  } 
-    </style>
       <script src="theMedium.js" defer></script>
+      <style>
+        body {
+        margin: 0;
+        padding: 0;
+        background-image: url("images/crack.jpg");
+        background-size: contain;        
+        background-repeat: no-repeat;  
+        background-position: center;   
+        overflow: hidden;  
+        }
+      </style>
     </head>
     <body>
-        <div class="typing-wrapper">
- <a href="comic.html"><p id="line1" class="line1"></p></a>
-  <p id="line2" class="line2"></p>
-</div>
+          <a href="comic.html?page=5"><button id="back">Back to main storyline</button></a>
+
     </body>
 </html>
 
