--- a/FINAL/first.html
+++ b/FINAL/first.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <title> Home </title>
+      <title> First </title>
       <link rel="stylesheet" href="theStyle.css"> 
     <style>
       body {
