--- a/FINAL/thisguy.html
+++ b/FINAL/thisguy.html
@@ -1,25 +1,23 @@
 <html>
     <head>
-      <title> Home </title>
+      <title> This Guy </title>
       <link rel="stylesheet" href="theStyle.css"> 
-    <style>
-      body {
+      <script src="theMedium.js" defer></script>
+           
+      <style>
+              body {
         margin: 0;
         padding: 0;
-        background-image: url("CC.jpg");
+        background-image: url("images/thisguy.jpg");
         background-size: contain;        
         background-repeat: no-repeat;  
         background-position: center;   
         overflow: hidden;  
         } 
-    </style>
-      <script src="theMedium.js" defer></script>
+      </style> 
     </head>
     <body>
-        <div class="typing-wrapper">
- <a href="comic.html"><p id="line1" class="line1"></p></a>
-  <p id="line2" class="line2"></p>
-</div>
+    <a href="comic.html?page=7"><button id="back">Back to main storyline</button></a>
     </body>
 </html>
 
